// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should ExpenseSummary render properly 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewving 
      <span />
       expenses totalling:  
      <span>
        $0.00
      </span>
      <div
        className="page-header__action"
      >
        <Link
          className="button button--link"
          exact={true}
          to="/add"
        >
          Add an expense
        </Link>
      </div>
    </h1>
  </div>
</div>
`;

exports[`should ExpenseSummary render properly with expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewving 
      <span>
        3
      </span>
       expenses totalling:  
      <span>
        $12,013.00
      </span>
      <div
        className="page-header__action"
      >
        <Link
          className="button button--link"
          exact={true}
          to="/add"
        >
          Add an expense
        </Link>
      </div>
    </h1>
  </div>
</div>
`;
